--- a/css/dark2.css
+++ b/css/dark2.css
@@ -3,12 +3,30 @@
     color: white
 }
 
+.dark .button {
+    background-color: rgb(31, 31, 31);
+    border-color: white !important;
+    color: white !important
+}
+
+.dark .item-button {
+    background-color: rgb(31, 31, 31)
+}
+
+.dark .item-button:hover {
+    background-color: rgb(192, 192, 192)
+}
+
 .dark .current {
     background-color: orange !important
 }
 
+.dark .panel {
+    background-color: rgb(46, 46, 46);
+}
+
 .dark .progress-text {
-    color: #d3d3d3
+    color: white
 }
 
 .dark .progress-bar {
@@ -17,25 +35,6 @@
 
 .dark .progress-fill {
     background-color: rgb(46, 148, 231)
-}
-
-.dark .button {
-    background-color: rgb(31, 31, 31);
-    border-color: white !important;
-    color: white !important
-}
-
-.dark .item-button {
-    background-color: white
-}
-
-.dark .item-button:hover {
-    background-color: rgb(192, 192, 192)
-}
-
-.dark .tooltip .tooltipText {
-    background-color: black;
-    color: #fff
 }
 
 .dark .slider {
@@ -50,6 +49,13 @@
     background: #4CAF50
 }
 
-.dark .panel {
-    background-color: white
+
+
+.dark .w3-bordered tr, .w3-table-all tr {
+    border-bottom: 1px solid rgb(73, 73, 73);
+}
+
+.dark .w3-button:hover {
+    background-color: rgb(82, 82, 82) !important;
+    color: white !important
 }
